Changelog
=========

1.1b5 (unreleased)
------------------

- Nothing changed yet.


1.1b4 (2013-04-15)
------------------

* Be way more defensive when setting and resetting languages on fields
  (Added try/finally clauses accordingly) [skaeser]


1.1b3 (2013-03-21)
------------------

* Fixed bug in redirection


1.1b2 (2013-03-18)
------------------

* Fixed wrong call to index_html into blobfields [jnachtigall]


1.1b1 (2013-02-06)
------------------

* German translations

1.1a7 (2012-09-26)
------------------

* Fixed 'UNAUTHORIZED' error generated by mymemory.translated.net
* Allow widget_macro from a higher order

1.1a6 (2012-05-31)
------------------

* Python 2.4 & Plone 3 compatibility
* Fixed import in migrate.py

1.1a5 (2012-04-17)
------------------

* Restored translation functionality by using the free web service of
  http://mymemory.translated.net
* Added helper javascript file (multilanguage_tiny_mce_init.js) setting
  the text format to text/html and hiding it for multilanguage TinyMCE
  fields

1.1a4 (2012-03-21)
------------------

* Fixed post validation of ATCTFileContent to prevent unhandled CopyError
  when adding a file to a folder where an object with the same ID already exists

1.1a3 (2012-02-13)
------------------

* Added missing fallback check in image traversers

1.1a2 (2012-02-13)
------------------

* Fixed fallback issue for non blob file and image fields

1.1a1 (2012-02-06)
------------------

* Fixed redirection in images __bobo_traverse__

1.0 (2012-01-23)
----------------

* Use Plone 4+ translation files system.
  (Translations now work under Plone 4)
  [thomasdesvenain]

* Plone 4.1 compatibility.
  [thomasdesvenain]

1.0b17 (2011-09-28)
-------------------

* Final fix for the TinyMCE issue

1.0b16 (2011-09-26)
-------------------

* Fixed multilanguage blob fields (renaming now works, and several issues are resolved when using
  content language fallback)
* Fixed image and file caching patch to support language fallback